# sfar-rfe-antibioprophylaxie-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-api.yml
data/: exemple_structure.json
docs/: architecture.md  sources_rag_vs_mcp.md
src/: __init__.py  extract_rfe_atb.py  generate_api.py  mcp_server_rfe.py
tests/: __init__.py  test_extraction.py
